--- a/index.html
+++ b/index.html
@@ -10,24 +10,36 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="./media/monitor-dashboard.png" height="20px" width="20px">
-            <div class="title">Dashboard</div>
-            <div class="first">
-                <div class="home">Home</div>
-                <div class="profile">Profile</div>
-                <div class="messages">Messages</div>
-                <div class="history">History</div>
-                <div class="tasks">Tasks</div>
-                <div class="communities">Communities</div>
+            <div class="logo">
+                <img src="./media/monitor-dashboard.png" height="20px" width="20px">
+                <div class="title">Dashboard</div>
             </div>
-            <div class="second">
-                <div class="settings">Settings</div>
-                <div class="support">Support</div>
-                <div class="privacy">Privacy</div>
+            <div class="mainlinks">
+                <ul>
+                    <li class="home"><img src="./media/home.png">Home</li>
+                    <li class="profile"><img src="./media/face-woman-profile.png">Profile</li>
+                    <li class="messages"><img src="./media/message.png">Messages</li>
+                    <li class="history"><img src="./media/clipboard-text-clock.png">History</li>
+                    <li class="tasks"><img src="./media/calendar-check.png">Tasks</li>
+                    <li class="communities"><img src="./media/google-circles-communities.png">Communities</li>
+                </ul>
+            </div>
+            <div class="seclinks">
+                <ul>
+                    <li class="settings"><img src="./media/cog.png">Settings</li>
+                    <li class="support"><img src="./media/face-agent.png">Support</li>
+                    <li class="privacy"><img src="./media/account-lock.png">Privacy</li>
+                </ul>
             </div>
         </div>
         <div class="mainbar">
-            <div class="searcharea">Search</div>
+            <div class="searcharea">
+                <img src="./media/magnify.png">
+                <div class="searchbar"></div>
+                <img src="./media/bell.png">
+                <img src="./media/icogperson.jpg" height="50px">
+                <div class="user">João Araújo</div>
+            </div>
             <div class="hithere">Hi there</div>
         </div>
         <div class="nav">
