--- a/index.html
+++ b/index.html
@@ -4,53 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrator Dashboard</title>
+    <title>Admin Dashboard</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <div class="logo">
-                <img src="./media/monitor-dashboard.png" height="20px" width="20px">
-                <div class="title">Dashboard</div>
-            </div>
-            <div class="mainlinks">
-                <ul>
-                    <li class="home"><img src="./media/home.png">Home</li>
-                    <li class="profile"><img src="./media/face-woman-profile.png">Profile</li>
-                    <li class="messages"><img src="./media/message.png">Messages</li>
-                    <li class="history"><img src="./media/clipboard-text-clock.png">History</li>
-                    <li class="tasks"><img src="./media/calendar-check.png">Tasks</li>
-                    <li class="communities"><img src="./media/google-circles-communities.png">Communities</li>
-                </ul>
-            </div>
-            <div class="seclinks">
-                <ul>
-                    <li class="settings"><img src="./media/cog.png">Settings</li>
-                    <li class="support"><img src="./media/face-agent.png">Support</li>
-                    <li class="privacy"><img src="./media/account-lock.png">Privacy</li>
-                </ul>
-            </div>
+    <div class="sidebar">
+        <div class="dashboard">
+            <img src="./media/monitor-dashboard.png">Dashboard
         </div>
-        <div class="mainbar">
-            <div class="searcharea">
-                <img src="./media/magnify.png">
-                <div class="searchbar"></div>
-                <img src="./media/bell.png">
-                <img src="./media/icogperson.jpg" height="50px">
-                <div class="user">João Araújo</div>
-            </div>
-            <div class="hithere">Hi there</div>
+        <div class="main-links">
+            <div class="home"><img src="./media/home.png">Home</div>
+            <div class="profile"><img src="./media/face-woman-profile.png">Profile</div>
+            <div class="messages"><img src="./media/message.png">Messages</div>
+            <div class="history"><img src="./media/clipboard-text-clock.png">History</div>
+            <div class="tasks"><img src="./media/calendar-check.png">Tasks</div>
+            <div class="community"><img src="./media/google-circles-communities.png">Community</div>
         </div>
-        <div class="nav">
-            <div class="navtitle">Your projects</div>
-            <div class="space1">1</div>
-            <div class="space2">2</div>
-            <div class="space3">3</div>
-            <div class="space4">4</div>
-            <div class="anon">Hello</div>
-            <div class="anoncontent">123</div>
+        <div class="sec-links">
+            <div class="settings"><img src="./media/cog.png">Settings</div>
+            <div class="support"><img src="./media/face-agent.png">Support</div>
+            <div class="privacy"><img src="./media/account-lock.png">Privacy</div>
         </div>
     </div>
+    <div class="header">
+        <div class="headertopLH">
+            <div class="searchbar">
+                <img src="./media/magnify.png">
+                <input>
+            </div>
+        <div class="headertopRH">
+            <img src="./media/bell.png">
+            <img src="./media/icogperson.jpg">
+            John Doe
+        </div>
+        <div class="headerbottom">
+            <div class="headerbottomLH">
+                Hello
+            </div>
+            <div class="headerbottomRH"></div>
+        </div>
+    </div>
+    <div class="main-content">Main-content</div>
 </body>
 </html>
