--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+<div class="main">
     <div class="sidebar">
-        <div class="title">Dashboard</div>
+        <div class="sidebar-title">Dashboard</div>
         <div class="mainlinks">
             <div class="home">Home</div>
             <div class="profile">Profile</div>
@@ -23,9 +25,10 @@
             <div class="privacy">Privacy</div>
         </div>
     </div>
-    <div class="main">
-        <div class="header"></div>
-        <div class="content"></div>
+    <div class="nav">
+        <div class="header">Hi there!</div>
+        <div class="content">Space 1</div>
     </div>
+</div>
 </body>
 </html>
