--- a/index.html
+++ b/index.html
@@ -4,66 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>Document</title>
 </head>
 <body>
-<div class="main">
-    <div class="sidebar">
-        <div class="sidebar-title">
-            <img src="/media/monitor-dashboard.png">
-            <div class="title">Dashboard</div>
-        </div>
-        <div class="mainlinks">
-            <div class="home"><img src="/media/home.png">Home</div>
-            <div class="profile"><img src="media/face-woman-profile.png">Profile</div>
-            <div class="messages"><img src="media/message.png">Messages</div>
-            <div class="history"><img src="/media/clipboard-text-clock.png">History</div>
-            <div class="tasks"><img src="/media/calendar-check.png">Tasks</div>
-            <div class="communities"><img src="/media/google-circles-communities.png">Communities</div>
-        </div>
-        <div class="seclinks">
-            <div class="settings"><img src="/media/cog.png">Settings</div>
-            <div class="support"><img src="/media/face-agent.png">Support</div>
-            <div class="privacy"><img src="/media/account-lock.png">Privacy</div>
-        </div>
-    </div>
-    <div class="nav">
-        <div class="header">
-            <div class="header-top">
-                <div class="magglass">
-                    <img src="/media/magnify.png">
-                </div>
-                <div class="searchbar">
-                    <input type="text" placeholder="Search...">
-                </div>
-            </div>
-            <div class="sbRH">
-                <div class="bell">
-                    <img src="/media/bell.png">
-                </div>
-                <div class="userImage">
-                    <img src="/media/icogperson.jpg" height="50px">
-                </div>
-                <div class="userName">
-                    Unknown user
-                </div>
-            </div>
-        </div>
-        <div class="content">
-            <div class="yourProjects">Your Projects
-                <p></p>
-                <div class="project1">Super Cool Project</div>
-                <div class="project2">Less Cool Project</div>
-                <div class="project3">Annoying Project</div>
-                <div class="project4">Place Holder 1</div>
-                <div class="project5">Place Holder 2</div>
-                <div class="project6">Place Holder 3</div>
-            </div>
-            <div class="announcements">Announcements</div>
-            <div class="trending">Trending</div>
-        </div>
-    </div>
-</div>
+    
 </body>
 </html>
