--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
     <title>Admin Dash</title>
 </head>
 <body>
-    <div class="global">
-        <div class="sidebar">Dashboard</div>
-        <div class="main">
-            <div class="searchbar">Search  Bar</div>
-            <div class="nav">
-                <div class="projects">Your projects</div>
-                <div class="annon">Annonuncments</div>
-            </div>
-        </div>
+    <div class="sidebar">
+        <div class="dashboard"><img src="./icons/view-dashboard.svg" max-width: 10%>Dashboard</div>
+        <div class="home"><img src="./icons/home.svg" height="50px">Home</div>
+        <div class="profile"><img src="./icons/"></div>
+        <div class="messages"><img src="./icons/message.svg"></div>
+        <div class="history"><img src="./icons/history.svg"></div>
+        <div class="tasks"><img src="./icons/briefcase.svg"></div>
+        <div class="communities"><img src="./icons/google-circles-communities.svg"></div>
+        <div class="settings"><img src="./icons/cog-outline.svg">Settings</div>
+        <div class="support"><img src="./icons/lifebuoy.svg">Support</div>
+        <div class="privacy"><img src="./icons/folder-hidden.svg">Privacy</div>
+    </div>
+    <div class="searchbar">Search Bar</div>
+    <div class="main-content">
+        <div class="projects">Your projects</div>
+        <div class="annon">Annonuncments</div>
+    </div>
     </div>
 </body>
 </html>
+
