--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="dashboard"><img src="./icons/view-dashboard.svg" max-width: 10%>Dashboard</div>
-        <div class="home"><img src="./icons/home.svg" height="50px">Home</div>
-        <div class="profile"><img src="./icons/"></div>
-        <div class="messages"><img src="./icons/message.svg"></div>
-        <div class="history"><img src="./icons/history.svg"></div>
-        <div class="tasks"><img src="./icons/briefcase.svg"></div>
-        <div class="communities"><img src="./icons/google-circles-communities.svg"></div>
+        <div class="dashboard"><img src="./icons/view-dashboard.svg" class="hello">Dashboard</div>
+        <div class="home"><img src="./icons/home.svg">Home</div>
+        <div class="profile"><img src="./icons/card-account-details-outline.svg">Profile</div>
+        <div class="messages"><img src="./icons/message.svg">Messages</div>
+        <div class="history"><img src="./icons/history.svg">History</div>
+        <div class="tasks"><img src="./icons/briefcase.svg">Tasks</div>
+        <div class="communities"><img src="./icons/google-circles-communities.svg">Communities</div>
         <div class="settings"><img src="./icons/cog-outline.svg">Settings</div>
         <div class="support"><img src="./icons/lifebuoy.svg">Support</div>
         <div class="privacy"><img src="./icons/folder-hidden.svg">Privacy</div>
     </div>
-    <div class="searchbar">Search Bar</div>
+    <div class="header">
+        <div class="searchbar">
+            <img src="./icons/magnify.svg">
+            <form>
+                <label></label>
+                <input type="text">
+            </form>
+        </div>
+        <div class="userinfo">User Info</div>
+        <div class="usergreet">Greet</div>
+        <div class="userbutt">Buttons</div>
+    </div>
     <div class="main-content">
         <div class="projects">Your projects</div>
         <div class="annon">Annonuncments</div>
