--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Admin Dash</title>
 </head>
+
 <body>
     <div class="sidebar">
-        <div class="dashboard"><img src="./icons/view-dashboard.svg" class="hello">Dashboard</div>
+        <div class="dashboard"><img src="./icons/view-dashboard.svg">Dashboard</div>
         <div class="home"><img src="./icons/home.svg">Home</div>
         <div class="profile"><img src="./icons/card-account-details-outline.svg">Profile</div>
         <div class="messages"><img src="./icons/message.svg">Messages</div>
@@ -20,23 +22,31 @@
         <div class="support"><img src="./icons/lifebuoy.svg">Support</div>
         <div class="privacy"><img src="./icons/folder-hidden.svg">Privacy</div>
     </div>
-    <div class="header">
-        <div class="searchbar">
-            <img src="./icons/magnify.svg">
-            <form>
-                <label></label>
-                <input type="text">
-            </form>
+    <div class="rhside">
+        <div class="header">
+            <div class="searchbar">
+                <img src="./icons/magnify.svg">
+                <form>
+                    <label></label>
+                    <input type="text">
+                </form>
+            </div>
+            <div class="userinfo">
+                <img src="./icons/bell.svg">
+                <img src="./icons/cat.png">Johny Bigody
+            </div>
+            <div class="usergreet"><img src="./icons/cat.png">Hi there, Johny Bigody</div>
+            <div class="userbutt" id="usericon">
+                <button>User</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
-        <div class="userinfo">User Info</div>
-        <div class="usergreet">Greet</div>
-        <div class="userbutt">Buttons</div>
-    </div>
-    <div class="main-content">
-        <div class="projects">Your projects</div>
-        <div class="annon">Annonuncments</div>
-    </div>
+        <div class="main-content">
+            <div class="projects">Your projects</div>
+            <div class="annon">Annonuncments</div>
+        </div>
     </div>
 </body>
-</html>
 
+</html>
