--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
         <div class="support"><img src="./icons/lifebuoy.svg">Support</div>
         <div class="privacy"><img src="./icons/folder-hidden.svg">Privacy</div>
     </div>
-    <div class="rhside">
-        <div class="header">
-            <div class="searchbar">
+    <div class="header">
+        <div class="topheader">
+            <div class="lhtopheader">
                 <img src="./icons/magnify.svg">
-                <form>
-                    <label></label>
-                    <input type="text">
-                </form>
+                <div class="searchbar">
+                    <form>
+                        <input type="text">
+                    </form>
+                </div>
             </div>
-            <div class="userinfo">
+            <div class="rhtopheader">
                 <img src="./icons/bell.svg">
-                <img src="./icons/cat.png">Johny Bigody
+                <img src="./icons/cat.png">Johnny Bigody
             </div>
+        </div>
+        <div class="lowheader">
             <div class="usergreet"><img src="./icons/cat.png">Hi there, Johny Bigody</div>
             <div class="userbutt" id="usericon">
                 <button>User</button>
@@ -42,10 +45,19 @@
                 <button>Share</button>
             </div>
         </div>
-        <div class="main-content">
-            <div class="projects">Your projects</div>
-            <div class="annon">Annonuncments</div>
+    </div>
+    <div class="main-content">
+        <div class="projects">
+            <div class="project1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente necessitatibus
+                temporibus, autem maxime distinctio fugiat quo natus reprehenderit repellendus!</div>
+            <div class="project2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente necessitatibus
+                temporibus, autem maxime distinctio fugiat quo natus reprehenderit repellendus!</div>
+            <div class="project3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente necessitatibus
+                temporibus, autem maxime distinctio fugiat quo natus reprehenderit repellendus!</div>
+            <div class="project4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente necessitatibus
+                temporibus, autem maxime distinctio fugiat quo natus reprehenderit repellendus!</div>
         </div>
+        <div class="annon">Annonuncments</div>
     </div>
 </body>
 
